appId: com.illinicover.app
---
- launchApp
- tapOn: "Deals"
- tapOn: "Add deal for KAMS"
- assertVisible: "Add Deal"
